src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>LO_NO_Cust_Resp_Phone__c</fullName>
        <label>LO NO Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LO_NO_Cust_Resp_Team__c</fullName>
        <label>LO NO Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_NO_Cust_Resp_Title__c</fullName>
        <label>LO NO Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_NO_Customer_Service_Segment__c</fullName>
        <label>LO NO Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_NO_Sales_Mode__c</fullName>
        <label>LO NO Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_NO_Sub_Segment__c</fullName>
        <label>LO NO Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_NO_Top_Segment__c</fullName>
        <label>LO NO Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_NO_custom_call_interval__c</fullName>
        <label>LO NO custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_SE_Cust_Resp_Email__c</fullName>
        <label>LO SE Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LO_SE_Cust_Resp_Name__c</fullName>
        <label>LO SE Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_Cust_Resp_Phone__c</fullName>
        <label>LO SE Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LO_SE_Cust_Resp_Team__c</fullName>
        <label>LO SE Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_Cust_Resp_Title__c</fullName>
        <label>LO SE Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_Customer_Service_Segment__c</fullName>
        <label>LO SE Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_Sales_Mode__c</fullName>
        <label>LO SE Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_Sub_Segment__c</fullName>
        <label>LO SE Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_Top_Segment__c</fullName>
        <label>LO SE Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_SE_custom_call_interval__c</fullName>
        <label>LO SE custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LanguageFormula__c</fullName>
        <description>Hidden field used by JS buttons since accessing Language__c through {!Account.Language__c} doesn&apos;t return anything</description>
        <formula>TEXT(Language__c)</formula>
        <label>LanguageFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>af</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>el</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>he</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Synced__c</fullName>
        <label>Last Synced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Primary_Ind_Group_77__c</fullName>
        <label>Legal Entity Primary Ind Group - 77</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Primary_Ind_Group_8__c</fullName>
        <label>Legal Entity Primary Ind Group 8</label>
        <picklist>
            <picklistValues>
                <fullName>*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Primary_Industry_Code__c</fullName>
        <formula>TEXT(Legal_Entity_Primary_Industry__c)</formula>
        <label>Legal Entity Primary Industry Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Primary_Industry__c</fullName>
        <label>Legal Entity Primary Industry</label>
        <picklist>
            <picklistValues>
                <fullName>43390</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>59110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46190</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47711</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47593</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>69101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24340</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>84139</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16292</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46731</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>84222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>77330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47641</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_in_Group__c</fullName>
        <description>Level of the account node in the Orbis legal hierarchy tree.</description>
        <label>Level in Group</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liquidation_Date__c</fullName>
        <label>Liquidation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ME_SE_Cust_Resp_Email__c</fullName>
        <label>ME SE Cust Resp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ME_SE_Cust_Resp_Name__c</fullName>
        <label>ME SE Cust Resp Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_Cust_Resp_Phone__c</fullName>
        <label>ME SE Cust Resp Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ME_SE_Cust_Resp_Team__c</fullName>
        <label>ME SE Cust Resp Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_Cust_Resp_Title__c</fullName>
        <label>ME SE Cust Resp Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_Customer_Service_Segment__c</fullName>
        <label>ME SE Customer Service Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_Sales_Mode__c</fullName>
        <label>ME SE Sales Mode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_Sub_Segment__c</fullName>
        <label>ME SE Sub Segment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_Top_Segment__c</fullName>
        <label>ME SE Top Segment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ME_SE_custom_call_interval__c</fullName>
        <label>ME SE custom call interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MODInteressent_Duplicate_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter out already checked accounts for MODInteressent duplicates.</description>
        <label>MODInteressent Duplicate checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MODTager_Duplicate_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to filter out already checked accounts for duplicates of MODTager Number..</description>
        <label>MODTager Duplicate checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOD_Address_Number__c</fullName>
        <label>MOD Address Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOD_Interessent_Number__c</fullName>
        <description>MOD Intressent Number</description>
        <externalId>true</externalId>
        <label>MOD Interessent Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOD_Modtager_Number__c</fullName>
        <externalId>true</externalId>
        <label>MOD Modtager Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_of_benefit_club__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Additional Private Person attribute</inlineHelpText>
        <label>Member of benefit club</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Category__c</fullName>
        <description>Merge Category options</description>
        <label>Merge Category</label>
        <picklist>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked-Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merge_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Master</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merge_Search_Results_Order__c</fullName>
        <formula>IF(ISPICKVAL(Merge_Category__c, &apos;Master&apos;), 1, 
IF(TEXT(Merge_Category__c)== &apos;&apos;, 2, 
IF(ISPICKVAL(Merge_Category__c, &apos;Survivor&apos;), 3, 
4) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Search Results Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metaphone_Primary_Encoding__c</fullName>
        <description>The double metaphone encoded version of the Name. Used for fuzzy matching on the field. Not to be shown or edited by the user. Updated by triggers.</description>
        <inlineHelpText>The double metaphone encoded version of the Name. Used for fuzzy matching on the field. Not to be shown or edited by the user. Updated by triggers.</inlineHelpText>
        <label>Metaphone Primary Encoding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ModInteressentDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ModInteressentDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModModtagerDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ModModtagerDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_10__c</fullName>
        <label>Name 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_11__c</fullName>
        <label>Name 11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_12__c</fullName>
        <label>Name 12</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nedl_ggningsdatum__c</fullName>
        <label>Nedläggningsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newsletter_Danish__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subscribes to Danish Newsletter</inlineHelpText>
        <label>Newsletter Danish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_English__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subscribes to English Newsletter</inlineHelpText>
        <label>Newsletter English</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_German__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subscribes to German Newsletter</inlineHelpText>
        <label>Newsletter German</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_LO_DK__c</fullName>
        <label>Next Call List Date LO DK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_LO_FI_DPD__c</fullName>
        <label>Next Call List Date LO FI DPD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_LO_FI__c</fullName>
        <label>Next Call List Date LO FI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_LO_NO__c</fullName>
        <label>Next Call List Date LO NO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_LO_SE__c</fullName>
        <label>Next Call List Date LO SE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_ME_SE__c</fullName>
        <label>Next Call List Date ME SE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_PDK_BE__c</fullName>
        <description>Telesales next date for contact</description>
        <label>Next Call List Date PDK BE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Call_List_Date_PDK_LO__c</fullName>
        <label>Next Call List Date PDK LO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_SAI__c</fullName>
        <description>For use in workflow to determine whether workflow should run on updating account record type when account is External Partner or Competitor. Not to be displayed on the page layout</description>
        <label>No of SAI</label>
        <summaryForeignKey>Sales_Area_Information__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_LO_DK__c</fullName>
        <label>Not reached counter LO DK</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_LO_FI_DPD__c</fullName>
        <label>Not reached counter LO FI DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_LO_FI__c</fullName>
        <label>Not reached counter LO FI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_LO_NO__c</fullName>
        <label>Not reached counter LO NO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_LO_SE__c</fullName>
        <label>Not reached counter LO SE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_ME_SE__c</fullName>
        <label>Not reached counter ME SE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_PDK_BE__c</fullName>
        <label>Not reached counter PDK BE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_reached_counter_PDK_LO__c</fullName>
        <label>Not reached counter PDK LO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_of_Cash_Counting_Machines__c</fullName>
        <label>Nr of Cash Counting Machines</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_of_Desks__c</fullName>
        <label>Nr of Desks</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_of_Number_Dispensers__c</fullName>
        <label>Nr of Number Dispensers</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_of_Poster_Frames__c</fullName>
        <label>Nr of Poster Frames</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Companies__c</fullName>
        <label>Number of Companies</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_at_Legal_Entity__c</fullName>
        <label>Number of Employees at Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>PAN:AA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA81</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA82</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_at_Work_Site__c</fullName>
        <label>Number of Employees at Work Site</label>
        <picklist>
            <picklistValues>
                <fullName>PAN:AA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAN:AA99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA81</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA82</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA83</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA85</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE:AA86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>